refactor: move api entry point to '/v1' to avoid mdsp conflicts
- '/api' is occupied by the mdsp api server, can't be used
- defining a prefix makes it easier to setup interceptors and
  auth handlers
